<resources>
    <string name="app_name">OICQ</string>
    <string name="welcome">Welcome\nto\nOICQ</string>
    <string name="guide_page1">Find new friends</string>
    <string name="guide_page2">It is a new word!!</string>
    <string name="enter_app">Start</string>

    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_login">Log in</string>
    <string name="button_signin">Sign in</string>

    <string name="username">Mark</string>

    <string name="add_friend_name_hint">Type username here</string>
    <string name="add_friend_remark_hint">Type remark here</string>
    <string name="add_friend_button">Add</string>


</resources>
