<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/add_friend_background"/>

    <!--tools:context加上之后可以看到对应activity主题加上layout布局的效果-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        tools:context=".activity.LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:layout_marginTop="180dp"
            android:padding="24dp"
            android:paddingTop="16dp">

            <EditText
                android:id="@+id/add_friend_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_friend_name_hint"/>

            <EditText
                android:id="@+id/add_friend_remark_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_friend_remark_hint"/>

            <android.support.design.button.MaterialButton
                android:id="@+id/add_friend_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_friend_button"
                android:layout_gravity="center_horizontal"/>


        </LinearLayout>

    </ScrollView>

</RelativeLayout>


